fix modal widtd in on tablet

--- a/src/sass/_modal_about.scss
+++ b/src/sass/_modal_about.scss
@@ -14,7 +14,7 @@
     transition: transform $transition;
 
     @media screen and (min-width: $tablet) {
-        max-width: 750px;
+        max-width: 700px;
     }
 
     @media screen and (min-width: $desktop) {
